WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118350
Gif: zero filling should use memset instead of setRGBA for every pixel
https://bugs.webkit.org/show_bug.cgi?id=118350
Summary
Gif: zero filling should use memset instead of setRGBA for every pixel
Balazs Kelemen
Reported
2013-07-03 03:45:32 PDT
GIFImageDecoder::initializeFrameBuffer use a loop to fill a subrect with tranparent pixels. This is extremely ineffecient. The use case for this code path is not frequent on the web but it's still better to fix.
Attachments
Patch
(7.48 KB, patch)
2013-07-03 04:46 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2013-07-03 04:46:46 PDT
Created
attachment 205993
[details]
Patch
WebKit Commit Bot
Comment 2
2013-07-03 06:55:30 PDT
Comment on
attachment 205993
[details]
Patch Clearing flags on attachment: 205993 Committed
r152352
: <
http://trac.webkit.org/changeset/152352
>
WebKit Commit Bot
Comment 3
2013-07-03 06:55:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug